# OsDev

./: .cproject  .gdbinit  .gitignore  .project  CMakeLists.txt  Makefile  README.md  build_kernel.sh  build_tests.sh  build_user.sh  elf_in_memory  gtest.cmake  higher_half_memory  kernel_as_service  physical_memory  remount_hdd.sh  run.sh  rungdb.sh  user_mode_multitasking
kernel/: CMakeLists.txt  README  main.cpp  phobos.cpp  phobos.h
kernel/_demos/: CMakeLists.txt  Demo.h  Fat32Demo.cpp  Fat32Demo.h  MouseDemo.cpp  MouseDemo.h  VgaDemo.cpp  VgaDemo.h
kernel/arch/: CMakeLists.txt
kernel/arch/x86_64/: CMakeLists.txt  boot.S  (+2 more)
kernel/cpuexceptions/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.h  PageFaultHandler.cpp  UnhandledExceptionHandler.cpp  UnhandledExceptionHandler.h
kernel/drivers/: AtaDriver.cpp  AtaDriver.h  Int80hDriver.cpp  Int80hDriver.h  KeyboardDriver.h  KeyboardScanCodeSet.cpp  KeyboardScanCodeSet.h  MouseDriver.cpp  MouseDriver.h  PitDriver.cpp  UnhandledDeviceDriver.h  VgaDriver.cpp  VgaDriver.h
kernel/filesystem/: CMakeLists.txt  UnixPath.cpp  UnixPath.h  VfsManager.cpp  VfsManager.h
kernel/hardware/: CMakeLists.txt  Gdt.cpp  Gdt.h  Idt.cpp  InterruptNumbers.h  PCIController.cpp  PCIController.h
kernel/interface/: CMakeLists.txt
kernel/kstd/: Allocator.cpp  Allocator.h  CMakeLists.txt  List.cpp  List.h  String.cpp  Vector.h  kstd.cpp  kstd.h  memory.cpp
kernel/logging/: CMakeLists.txt  KernelLog.h
kernel/memory/: AllocationPolicy.h  CMakeLists.txt  HigherHalf.cpp  HigherHalf.h  MemoryManager.cpp  PageTables.h  WyoosAllocationPolicy.cpp
kernel/middlespace/: CMakeLists.txt  FsEntry.h  Keyboard.h  MouseState.h  SysCallNumbers.h  Vfs.h  Vga.h  syscall_errors.h
kernel/modules/: CMakeLists.txt
kernel/multitasking/: KLockGuard.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  Task.cpp  Task.h  TaskFactory.cpp  TaskFactory.h  TaskGroupData.cpp  TaskGroupData.h  TaskList.cpp  TaskList.h  TaskManager.cpp  TaskManager.h  TaskRoundRobin.cpp  TaskRoundRobin.h
kernel/services/: CMakeLists.txt  CommonStructs.h
kernel/syscalls/: CMakeLists.txt  SysCallHandler.cpp  SysCallHandler.h  SysCallManager.cpp
kernel/time/: TimeManager.cpp  TimeManager.h  Timer.cpp  Timer.h  TimerList.cpp  TimerList.h
kernel/understructure/: CMakeLists.txt
kernel/utils/: Assert.cpp  Assert.h  CMakeLists.txt  Elf64.cpp  Elf64.h  ElfRunner.cpp  ElfRunner.h  Multiboot2.cpp  Sse.cpp
src/: CMakeLists.txt  CpuInfo.cpp  CpuInfo.h  InterruptManager.cpp  InterruptManager.h  InterruptNumbers.h  KernelLog.cpp  KernelLog.h  Multiboot2.cpp  Multiboot2.h  PCIController.cpp  PCIController.h  Port.cpp  Port.h  ScanCodeSet1.cpp  ScanCodeSet1.h  ScreenPrinter.cpp  ScreenPrinter.h  TaskManager.cpp  TaskManager.h  kmain.cpp  kstd.cpp  kstd.h  main.cpp  types.h
src/_demos/: CpuSpeedDemo.cpp  CpuSpeedDemo.h  Demo.cpp  Demo.h  Fat32Demo.cpp  Fat32Demo.h  MouseDemo.cpp  MouseDemo.h  MultitaskingDemo.cpp  MultitaskingDemo.h  TerminalDemo.cpp  TerminalDemo.h  VgaDemo.cpp  VgaDemo.h  ata.h  ata_demo.cpp  ata_demo.h
src/cpu/: CpuState.cpp  CpuState.h
src/cpuexceptions/: ExceptionHandler.h  ExceptionManager.cpp  ExceptionManager.h  Int15Handler.cpp  Int15Handler.h  PageFaultHandler.cpp  PageFaultHandler.h  TaskExitHandler.cpp  TaskExitHandler.h  UnhandledExceptionHandler.cpp  UnhandledExceptionHandler.h
src/drivers/: AtaDriver.cpp  AtaDriver.h  CMakeLists.txt  DeviceDriver.cpp  DeviceDriver.h  DriverManager.cpp  DriverManager.h  Int80hDriver.cpp  Int80hDriver.h  KeyboardDriver.cpp  KeyboardDriver.h  KeyboardScanCodeSet.cpp  KeyboardScanCodeSet.h  MouseDriver.cpp  MouseDriver.h  PitDriver.cpp  PitDriver.h  SysCallDriver.cpp  SysCallDriver.h  TimerDriver.cpp  TimerDriver.h  UnhandledDeviceDriver.cpp  UnhandledDeviceDriver.h  VgaDriver.cpp  VgaDriver.h
src/filesystem/: CMakeLists.txt  Fat32.cpp  Fat32.h  Fat32ClusterChain.cpp  Fat32ClusterChain.h  Fat32Data.cpp  Fat32Data.h  Fat32Entry.cpp  Fat32Entry.h  Fat32Structs.h  Fat32Table.cpp  Fat32Table.h  Fat32Utils.cpp  Fat32Utils.h  MassStorageMsDos.h  MsDosPartitionTable.cpp  MsDosPartitionTable.h  UnixPath.cpp  UnixPath.h  VfsEntry.cpp  VfsEntry.h  VfsFat32Entry.cpp  VfsFat32Entry.h  VfsFat32MountPoint.cpp  VfsFat32MountPoint.h  VfsManager.cpp  VfsManager.h  VfsMountPoint.cpp  VfsMountPoint.h  VfsPseudoEntry.cpp  VfsPseudoEntry.h  VolumeFat32.cpp  VolumeFat32.h  virtual_file_system
src/hardware/: CMakeLists.txt  CpuState.cpp  CpuState.h  Gdt.cpp  Gdt.h  Idt.cpp  Idt.h  InterruptManager.cpp  InterruptManager.h  InterruptNumbers.h  PCIController.cpp  PCIController.h  PageTables.cpp  PageTables.h  Port.h
src/kstd/: kstd.cpp
src/logging/: KernelLog.cpp
src/memory/: AllocationPolicy.cpp  AllocationPolicy.h  BumpAllocationPolicy.cpp  BumpAllocationPolicy.h  BumpAllocator.cpp  FrameAllocator.cpp  FrameAllocator.h  HigherHalf.h  MemoryManager.cpp  MemoryManager.h  PageTables.cpp  PageTables.h
src/middlespace/: Key.h  KeyboardScanCodeSet.cpp  KeyboardScanCodeSet.h  SysCallNumbers.h  SyscallNumbers.cpp  SyscallNumbers.h  VgaCharacter.h
src/multitasking/: CMakeLists.txt  Task.cpp  Task.h  TaskFactory.h  TaskManager.cpp  TaskManager.h
src/syscalls/: SysCallHandler.cpp  SysCallHandler.h  SysCallManager.cpp  SysCallManager.h
src/userspace/: ElfRunner.cpp  ElfRunner.h
src/utils/: CpuInfo.cpp  CpuInfo.h  Cursor.cpp  Cursor.h  Elf64.cpp  Elf64.h  ElfRunner.cpp  ElfRunner.h  GlobalConstructorsRunner.cpp  GlobalConstructorsRunner.h  KernelLog.cpp  KernelLog.h  LimitedAreaScreenPrinter.cpp  LimitedAreaScreenPrinter.h  LineBuffer.cpp  LineBuffer.h  Multiboot2.cpp  Multiboot2.h  ScreenPrinter.cpp  ScreenPrinter.h  ScrollableScreenPrinter.cpp  ScrollableScreenPrinter.h
test/: CMakeLists.txt  example.cpp  gtest.cmake
test/filesystem_test/: CMakeLists.txt  EntryCache_test.cpp  FilesystemRequests.h  OpenEntry_test.cpp  VfsManager_test.cpp  VfsTree_test.cpp  main.cpp
test/test/: CMakeLists.txt  EntryCache_test.cpp  OpenEntryTable_test.cpp  VfsTree_test.cpp
user/: CMakeLists.txt  linker.ld
user/ustd/: CMakeLists.txt  user_std
(+539 files in other folders)
